@@ -1,80 +1,66 @@
-FROM eclipse-temurin:17.0.8_7-jdk-jammy
+#######################################################
+# Python builder thetagang python package
+FROM python:3.14-bookworm AS python_builder
 
-RUN apt-get update \
-  && DEBIAN_FRONTEND=noninteractive apt-get install -qy --no-install-recommends \
-  ca-certificates \
-  fonts-liberation \
-  libasound2 \
-  libatk-bridge2.0-0 \
-  libatk1.0-0 \
-  libatspi2.0-0 \
-  libc6 \
-  libcairo2 \
-  libcups2 \
-  libcurl4 \
-  libdbus-1-3 \
-  libdrm2 \
-  libexpat1 \
-  libgbm1 \
-  libglib2.0-0 \
-  libgtk-3-0 \
-  libnspr4 \
-  libnss3 \
-  libpango-1.0-0 \
-  libu2f-udev \
-  libvulkan1 \
-  libx11-6 \
-  libxcb1 \
-  libxcomposite1 \
-  libxdamage1 \
-  libxext6 \
-  libxfixes3 \
-  libxi6 \
-  libxkbcommon0 \
-  libxrandr2 \
-  libxrender1 \
-  libxtst6 \
-  openjfx \
-  unzip \
-  wget \
-  xdg-utils \
-  xvfb \
-  && echo '0bd03c713f04c0a64367abbd3d5a40d228fcc2fb969c927bd7cdbd85baddac4b  ibc.zip' | tee ibc.zip.sha256 \
-  && wget -q https://github.com/IbcAlpha/IBC/releases/download/3.23.0/IBCLinux-3.23.0.zip -O ibc.zip \
-  && sha256sum -c ibc.zip.sha256 \
-  && unzip ibc.zip -d /opt/ibc \
-  && chmod o+x /opt/ibc/*.sh /opt/ibc/*/*.sh \
-  && rm ibc.zip \
-  && apt-get clean \
-  && rm -rf /var/lib/apt/lists/*
+RUN pip install uv
 
-ENV VIRTUAL_ENV="/opt/venv"
-ENV PATH="/opt/venv/bin:/root/.local/bin:${PATH}"
+WORKDIR /app
 
-WORKDIR /src
+COPY . /app/
 
-ADD ./tws/Jts /root/Jts
-ADD ./dist /src/dist
-ADD entrypoint.bash /src/entrypoint.bash
-ADD docker/patch-ibc-java-logging.sh /src/patch-ibc-java-logging.sh
-ADD ./data/jxbrowser-linux64-arm-7.29.jar /root/Jts/1045/jars/
-ADD ./thetagang/ibgateway-log4j2.xml /opt/thetagang/ibgateway-log4j2.xml
+# generate /dist folder
+RUN uv build
 
-RUN wget -qO- https://astral.sh/uv/install.sh | sh \
-  && uv python install 3.14 \
-  && uv venv /opt/venv --python 3.14 \
-  && if test "$(dpkg --print-architecture)" = "armhf" ; then export PIP_EXTRA_INDEX_URL=https://www.piwheels.org/simple ; fi \
-  && uv pip install --python /opt/venv/bin/python dist/thetagang-*.whl \
-  && rm -rf /root/.cache \
-  && rm -rf dist \
-  && echo '--module-path /usr/share/openjfx/lib' | tee -a /root/Jts/*/tws.vmoptions \
-  && echo '--add-modules java.base,java.naming,java.management,javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web' | tee -a /root/Jts/*/tws.vmoptions \
-  && echo '--add-opens java.desktop/javax.swing=ALL-UNNAMED' | tee -a /root/Jts/*/tws.vmoptions \
-  && echo '--add-opens java.desktop/java.awt=ALL-UNNAMED' | tee -a /root/Jts/*/tws.vmoptions \
-  && echo '--add-opens java.base/java.util=ALL-UNNAMED' | tee -a /root/Jts/*/tws.vmoptions \
-  && echo '--add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED' | tee -a /root/Jts/*/tws.vmoptions \
-  && sh /src/patch-ibc-java-logging.sh \
-  && echo '[Logon]' | tee -a /root/Jts/jts.ini \
-  && echo 'UseSSL=true' | tee -a /root/Jts/jts.ini
+FROM debian:12 AS setup
 
-ENTRYPOINT [ "/src/entrypoint.bash" ]
+ENV IBC_VERSION=3.24.0
+ENV IB_GATEWAY_VERSION=10.45.1g
+
+RUN apt-get update && \
+    apt-get install --no-install-recommends -y \
+    ca-certificates \
+    git \
+    libxtst6 \
+    libgtk-3-0 \
+    xvfb \
+    procps \
+    python3 \
+    python3-pip \
+    socat \
+    unzip \
+    wget2 \
+    xterm \
+    libasound2 \
+    libnss3 \
+    libgbm1 \
+    libnspr4
+
+# Download and setup IBC
+RUN wget2 https://github.com/IbcAlpha/IBC/releases/download/${IBC_VERSION}/IBCLinux-${IBC_VERSION}.zip -O ibc.zip \
+    && unzip ibc.zip -d /opt/ibc \
+    && rm ibc.zip
+
+ENV INSTALL_FILENAME="ibgateway-${IB_GATEWAY_VERSION}-standalone-linux-x64.sh"
+
+# Fetch hashes
+RUN wget2 "https://github.com/extrange/ibkr-docker/releases/download/${IB_GATEWAY_VERSION}-stable/ibgateway-${IB_GATEWAY_VERSION}-standalone-linux-x64.sh.sha256" \
+    -O hash
+
+# Download IB Gateway (which contains TWS) and check hashes
+RUN wget2 "https://github.com/extrange/ibkr-docker/releases/download/${IB_GATEWAY_VERSION}-stable/ibgateway-${IB_GATEWAY_VERSION}-standalone-linux-x64.sh" \
+    -O "$INSTALL_FILENAME" \
+    && sha256sum -c hash \
+    && chmod +x "$INSTALL_FILENAME" \
+    && yes '' | "./$INSTALL_FILENAME"  \
+    && rm "$INSTALL_FILENAME"
+
+# Copy scripts
+COPY image-files/start.sh image-files/replace.sh /
+COPY --from=python_builder /app/dist /src/dist
+
+RUN mkdir -p ~/ibc && mv /opt/ibc/config.ini ~/ibc/config.ini && \
+    chmod a+x ./*.sh /opt/ibc/*.sh /opt/ibc/scripts/*.sh && \
+    python3 -m pip install --break-system-packages /src/dist/thetagang-*.whl && \
+    rm -rf /src/dist
+
+ENTRYPOINT [ "/start.sh" ]
